--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -111,7 +111,7 @@ This report was generated automatically by [phylogenize](https://phylogenize.org
 
 # Phenotype calculation
 
-Below, trees for all phyla with at least `r pz.options('treemin')`
+Below, trees for all taxa with at least `r pz.options('treemin')`
 representatives in the input data are presented. Trees are colored according to
 the phenotype chosen (here, `r pz.options('which_phenotype')` in the environment
  `r pz.options('which_envir') `).
@@ -149,8 +149,8 @@ if (pz.options('which_phenotype') == "prevalence") {
                                       phenotype,
                                       phenoP,
                                       mapped.observed)
-  pz.db$taxa <- lapply(pz.db$trees, function(x) x$tip.label)
-  pz.db$nphyla <- length(pz.db$trees)
+  pz.db$species <- lapply(pz.db$trees, function(x) x$tip.label)
+  pz.db$ntaxa <- length(pz.db$trees)
 } else if (pz.options("which_phenotype") == "provided") {
   p_tbl <- read_tsv(pz.options("phenotype_file"))
   if (ncol(p_tbl) == 2) { # assume we only have species IDs and values
@@ -238,10 +238,10 @@ if (!pz.options('skip_graphs')) {
                                    100*logistic(phenotype))
       rmd.message <- ""
     } else {
-      rmd.message <- "(no phyla had more than one tip)"
+      rmd.message <- "(no taxa had more than one tip)"
     }
   } else {
-    rmd.message <- "(no phyla had more than one tip)"
+    rmd.message <- "(no taxa had more than one tip)"
   }
 }
 
@@ -266,17 +266,17 @@ if (pz.options('linearize')) { # mostly for testing
 taxaN <- names(which(pheno_nonzero_var(phenotype, pz.db$taxa)))
 
 if (pz.options('ncl') > 1) {
-    results <- result.wrapper.plm(phyla=taxaN,
+    results <- result.wrapper.plm(taxa=taxaN,
                                   pheno=phenotype,
                                   tree=pz.db$trees[taxaN],
-                                  clusters=pz.db$taxa[taxaN],
+                                  clusters=pz.db$species[taxaN],
                                   proteins=pz.db$gene.presence[taxaN],
                                   method=p.method)
 } else {
     results <- mapply(nonparallel.results.generator,
                       pz.db$gene.presence[taxaN],
                       pz.db$trees[taxaN],
-                      pz.db$taxa[taxaN],
+                      pz.db$species[taxaN],
                       as.list(taxaN),
                       MoreArgs=list(pheno=phenotype,
                                     method=p.method,
@@ -343,11 +343,10 @@ check.mem_usage()
 
 This process takes the set of genes that are significant and positively
 associated with the phenotype, then asks whether there are more than expected
-by chance in a given SEED subsystem. Subsystems come in three levels of
-granularity (referred to here as l1, l2, and l3); "l1" subsystems are the most
-general and "l3" are the most specific. </p>
+by chance in a given KEGG module or pathway. This requires clusterProfiler to
+be installed. </p>
 
-All SEED categories returned are significant at an FDR of 25%. "Strong", "Med",
+All pathways/modules returned are significant at an FDR of 25%. "Strong", "Med",
 and "Weak" refer to per-gene significance cutoffs of 5%, 10%, and 25%,
 respectively.
 
@@ -366,8 +365,6 @@ if (do_enrichment) {
                              cutoff,
                              ID,
                              Description,
-                             GeneRatio,
-                             BgRatio,
                              qvalue,
                              enr.estimate) %>%
       rename(Gene_significance=cutoff,
@@ -377,9 +374,8 @@ if (do_enrichment) {
              q_value=qvalue,
              Enrichment_odds_ratio=enr.estimate) %>%
       arrange(factor(Gene_significance, levels=names(signif[[1]])),
-              Phylum,
-              Subsystem_level,
-              desc(Enrichment_odds_ratio))
+              Taxon,
+              qvalue)
     
     check.mem_usage()
     write.csv(file=file.path(pz.options('out_dir'), "enr-table.csv"), pretty.enr.tbl)
@@ -393,23 +389,27 @@ Enrichment tables:
 options(knitr.table.format = "html")
 check.mem_usage()
 if (do_enrichment) {
-if (!is.null(pretty.enr.tbl)) {
-  cat(output.enr.table(pretty.enr.tbl))
-  check.mem_usage()
-  if (nrow(enrichment.tbl) > 0) {
-    enr.overlap <- select(enrichment.tbl,
-                          phylum,
-                          cutoff,
-                          termset,
-                          term,
-                          enr.overlap) %>% unnest %>%
-                   left_join(.,
-                             pz.db$gene.to.fxn,
-                             by=c("enr.overlap"="gene")) %>%
-                   rename(gene=enr.overlap, description=`function`) %>%
-                   mutate(effectsize=map2_dbl(phylum,
-                                              gene,
-                                              ~results[[.x]][1, .y]))
+  if (!is.null(pretty.enr.tbl)) {
+    cat(output.enr.table(pretty.enr.tbl))
+    check.mem_usage()
+    accession_to_fxn <- pz.db$gene.to.fxn %>%
+      select(accession, `function`) %>%
+      distinct()
+    if (nrow(enrichment.tbl) > 0) {
+      enr.overlap <- select(enrichment.tbl,
+                            taxon,
+                            cutoff,
+                            ID,
+                            Description,
+                            geneID) %>%
+        separate_longer_delim(geneID, delim="/") %>%
+        left_join(.,
+                  accession_to_fxn,
+                  by=c("geneID"="accession")) %>%
+        rename(gene=geneID, description=`function`) %>%
+        mutate(effectsize=map2_dbl(taxon,
+                                   gene,
+                                   ~results[[.x]][1, .y]))
     check.mem_usage()
     write.csv(file=file.path(pz.options('out_dir'),
                              "enr-overlaps.csv"),
@@ -417,10 +417,8 @@ if (!is.null(pretty.enr.tbl)) {
     write.csv(file=file.path(pz.options('out_dir'),
                              "enr-overlaps-sorted.csv"),
               arrange(enr.overlap,
-                      phylum,
+                      taxon,
                       factor(cutoff, levels=names(signif[[1]])),
-                      termset,
-                      term,
                       desc(effectsize)))
     check.mem_usage()
     rm(enr.overlap)
