--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -179,7 +179,20 @@ plotted.pheno.trees <- plot.phenotype.trees(phenotype,
 pheno.distros <- plot.pheno.distributions(phenotype,
                                           pz.db)
 
-print(pheno.distros)
+# Template for plots
+template <- c(
+    "### Taxonomy Group {{nm}}\n",
+    "```{r, echo = FALSE, warning = FALSE, message = FALSE}\n",
+    "pheno.distros[[{{nm}}]]\n",
+    "```\n",
+    "\n"
+)
+
+plots <- lapply(1:length(pheno.distros), function(nm) {
+    knitr::knit_expand(text = template)
+})
+
+#print(pheno.distros)
 write.table(file=file.path(pz.options('out_dir'), "phenotype.tab"),
             phenotype,
             sep = '\t')
@@ -192,7 +205,7 @@ rm(abd.meta); gc()
 
 ## All taxa
 
-```{r plot_pheno_trees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=length(plotted.pheno.trees), cache.lazy = FALSE, cache=TRUE}
+```{r knitr::knit(text = unlist(plots)), fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=length(plotted.pheno.trees), cache.lazy = FALSE, cache=TRUE}
 
 if (!pz.options('skip_graphs')) {
     plot.labeled.phenotype.trees(plotted.pheno.trees,
