--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -177,7 +177,7 @@ if (pz.options('which_phenotype') == "prevalence") {
 phenotype <- clean.pheno(phenotype, pz.db)
 pheno.distros <- plot.pheno.distributions(phenotype, pz.db)
 pheno.scale <- get.pheno.plotting.scales(phenotype, pz.db$trees, phenoP)
-plotted.pheno.trees <- plot.phenotype.trees(phenotype, pz.db$trees, pheno.scale)
+plotted.pheno.trees <- plot.phenotype.trees(phenotype, pz.db$trees, pz.db$taxonomy, pheno.scale)
 
 # Template for plots
 template <- c(
@@ -234,6 +234,7 @@ subtrees <- Filter(function(x) {
 if (!pz.options('skip_graphs')) {
   plotted.pheno.subtrees <- plot.phenotype.trees(phenotype,
                                                  subtrees,
+						 pz.db$taxonomy,
                                                  pheno.scale)
   if (!is.null(plotted.pheno.subtrees)) {
     if (length(plotted.pheno.subtrees) > 0) {
@@ -249,225 +250,6 @@ if (!pz.options('skip_graphs')) {
 }
 
 ```
-`r rmd.message`
-# Associations between genes and taxa
-
-This table gives an overview of how many genes were significantly associated at
-an FDR of 5%.
-
-```{r get_associations, warning = FALSE, message = FALSE, echo=FALSE, cache=FALSE}
-
-if (pz.options('linearize')) { # mostly for testing
-  p.method <- lm.fx.pv
-} else {
-  p.method <- phylolm.fx.pv
-}
-
-
-taxaN <- names(which(pheno_nonzero_var(phenotype, pz.db$species)))
-if (pz.options('ncl') > 1) {
-    results <- result.wrapper.plm(taxa=taxaN,
-                                  pheno=phenotype,
-                                  tree=pz.db$trees[taxaN],
-                                  clusters=pz.db$species[taxaN],
-                                  proteins=pz.db$gene.presence[taxaN],
-                                  method=p.method)
-} else {
-    results <- mapply(nonparallel.results.generator,
-                      pz.db$gene.presence[taxaN],
-                      pz.db$trees[taxaN],
-                      pz.db$species[taxaN],
-                      as.list(taxaN),
-                      MoreArgs=list(pheno=phenotype,
-                                    method=p.method,
-                                    use.for.loop=FALSE),
-                      SIMPLIFY=FALSE)
-}
-signif <- make.sigs(results)
-signs <- make.signs(results)
-
-pos.sig <- nonequiv.pos.sig(results, min_fx=pz.options('min_fx'))
-results.matrix <- make.results.matrix(results)
-
-knitr::kable(sapply(pos.sig, length), col.names = "significant genes")
-
-phy.with.sigs <- names(which(sapply(pos.sig, length) > 0))
-pos.sig.descs <- add.sig.descs(phy.with.sigs, pos.sig, pz.db$gene.to.fxn)
-
-pos.sig.thresh <- threshold.pos.sigs(pz.db, phy.with.sigs, pos.sig)
-pos.sig.thresh.descs <- add.sig.descs(phy.with.sigs, pos.sig.thresh, pz.db$gene.to.fxn)
-
-# recalculate, since some of these may go away
-phy.with.sigs <- names(which(sapply(pos.sig.thresh, length) > 0))
-
-write.csv(file = file.path(pz.options('out_dir'), "pos-sig-thresholded.csv"),
-          pos.sig.thresh.descs)
-rm(pos.sig.thresh.descs)
-
-write.csv(file = file.path(pz.options('out_dir'), "all-results.csv"),
-          results.matrix)
-
-```
-# Gene association heat maps
-
-The left shows the phenotype painted on tips of the tree as above. The right
-adds a heatmap where blue points represent presence of a gene (aligned with the
-tips of the tree) and white points represent absence. Only
-significantly-associated genes are displayed. Genes are clustered from left to
-right by Jaccard dissimilarity, so genes with similar patterns of inheritance
-will form vertical stripes. Horizontal stripes may be visible for taxa that
-have particularly extreme phenotypes.
-
-```{r gene_assoc_heat_maps, warning = FALSE, message = FALSE, echo=FALSE, results="hide", dev = "png", dpi = 300, cache=FALSE}
-
-
-
-cluster.plots <- mapply(do.clust.plot,
-                        pz.db$gene.presence[phy.with.sigs],
-                        pos.sig.thresh[phy.with.sigs],
-                        pz.db$trees[phy.with.sigs],
-                        plotted.pheno.trees[phy.with.sigs],
-                        phy.with.sigs,
-                        SIMPLIFY = FALSE)
-
-rm(cluster.plots)
-rm(plotted.pheno.trees)
-
-```
-
-# Enrichment analysis
-
-This process takes the set of genes that are significant and positively
-associated with the phenotype, then asks whether there are more than expected
-by chance in a given KEGG module or pathway. This requires clusterProfiler to
-be installed. </p>
-
-All pathways/modules returned are significant at an FDR of 25%. "Strong", "Med",
-and "Weak" refer to per-gene significance cutoffs of 5%, 10%, and 25%,
-respectively.
-
-```{r enrichment_analysis, warning = FALSE, message = FALSE, echo = FALSE,results="hide", cache=FALSE}
-do_enrichment <- ("clusterProfiler" %in% rownames(installed.packages()))
-if (do_enrichment) {
-  pretty.enr.tbl <- NULL
-  enrichment.tbl <- multi.kegg.enrich(signif,
-                                      signs,
-                                      pz.db$gene.to.fxn)
-  if (!is.null(enrichment.tbl)) {
-    enrichment.tbl <- filter(enrichment.tbl,
-                             qvalue <= 0.25, enr.estimate > 1)
-    pretty.enr.tbl <- select(enrichment.tbl,
-                             taxon,
-                             cutoff,
-                             ID,
-                             Description,
-                             qvalue,
-                             enr.estimate) %>%
-       rename(Gene_significance=cutoff,
-             Taxon=taxon,
-             Description=Description,
-             q_value=qvalue,
-             Enrichment_odds_ratio=enr.estimate) %>%
-      arrange(factor(Gene_significance, levels=names(signif[[1]])),
-              Taxon,
-              q_value)
-    write.csv(file=file.path(pz.options('out_dir'), "enr-table.csv"), pretty.enr.tbl)
-  }
-}
-```
-Enrichment tables:
-
-```{r enrichment_display, echo=FALSE, results='asis'}
-
-check_combination <- function(taxon, gene) {
-  tryCatch({
-    value <- results.matrix[[taxon]][1, gene]
-    if (length(value) == 0) {
-      return(FALSE)
-    }
-    return(TRUE)
-  }, error = function(e) {
-    return(FALSE)
-  })
-}
-
-options(knitr.table.format = "html")
-if (do_enrichment) {
-  if (!is.null(pretty.enr.tbl)) {
-    cat(output.enr.table(pretty.enr.tbl))
-    accession_to_fxn <- pz.db$gene.to.fxn %>%
-      select(accession, `function`) %>%
-      distinct()
-    if (nrow(enrichment.tbl) > 0) {
-      enr.overlap <- select(enrichment.tbl,
-                            taxon,
-                            cutoff,
-                            ID,
-                            Description,
-                            geneID) %>%
-        separate_longer_delim(geneID, delim="/") %>%
-        left_join(.,
-                  accession_to_fxn,
-                  by=c("geneID"="accession")) %>%
-        rename(gene=geneID, description=`function`) %>%
-	mutate(effectsize=map2_dbl(taxon,
-                                   gene,
-                                   ~{
-					   tryCatch({
-						   value <- results.matrix[[.x]][1, .y]
-					   	   if (length(value) == 0) {
-							   return(NA_real_)
-						   }
-						   return(value)
-					   }, error = function(e) {
-						   return(NA_real_)
-					   })
-				     }))
-    write.csv(file=file.path(pz.options('out_dir'),
-                             "enr-overlaps.csv"),
-              enr.overlap)
-    write.csv(file=file.path(pz.options('out_dir'),
-                             "enr-overlaps-sorted.csv"),
-              arrange(enr.overlap,
-                      taxon,
-                      factor(cutoff, levels=names(signif[[1]])),
-                      desc(effectsize)))
-    rm(enr.overlap)
-    rm(enrichments)
-    rm(results.matrix)
-  }
-}
-} else {
-  pz.message("Skipping enrichment as clusterProfiler could not be found")
-}
-```
-
-```{r cleanup, warning=FALSE, message=FALSE, echo=FALSE}
-# Clean up memory before rendering
-rm(results)
-rm(plotted.pheno.subtrees)
-rm(plotted.pheno.trees)
-rm(pz.db)
-```
-
-# Full output files
-
-Links to other files generated by the report:
-
-```{r, results='asis', echo=FALSE}
-
-if (is.null(pz.options('relative_out_dir'))) {
-  r.outdir <- pz.options('out_dir')
-} else {
-  r.outdir <- pz.options('relative_out_dir')
-}
-for (f in c("phenotype.tab",
-            "all-results.csv",
-            "pos-sig-thresholded.csv",
-            "enr-table.csv",
-            "enr-overlaps.csv",
-            "enr-overlaps-sorted.csv")) {
-  fp <- file.path(r.outdir, f)
   # Note, check the actual output directory when we're trying to figure out what
   # got made
   if (file.exists(file.path(pz.options('out_dir'), f))) {
