Fixed mismatch points on tree

--- a/package/phylogenize/inst/rmd/phylogenize-report.Rmd
+++ b/package/phylogenize/inst/rmd/phylogenize-report.Rmd
@@ -137,7 +137,7 @@ list2env(phenotype_results, environment())
 
 mapped.observed <- names(which(Matrix::rowSums(abd.meta$mtx) > 0))
 
-phenotype_info <- calc.phenotype.interest(abd.meta, pz.db)
+phenotype_info <- calc.phenotype.interest(abd.meta, pz.db, mapped.observed)
 pz.db <- phenotype_info[[1]]
 phenotype <- phenotype_info[[2]]
 phenoP <- phenotype_info[[3]]
@@ -179,24 +179,21 @@ if (!pz.options('skip_graphs')) {
 				     label=pz.options('which_phenotype'))
 }
 
-# with titles
 clinUtils::knitPrintListPlots(
 	plotsList = plots, 
 	type = "plotly", 
-	titles = names(plots), 
-	titleLevel = 3
+	titles = NULL, 
+	titleLevel = NULL
 )
 
 ### Only mapped/observed taxa {.tabset}
-
-Displays phenotype on trees, with only the mapped/observed taxa plotted.
-
 ```{r subtrees_pre, cache=FALSE, echo=FALSE}
 
 pheno.labels <- names(phenotype)
 subtrees <- lapply(pz.db$trees, function(tr) {
   keep.tips(tr, intersect(mapped.observed, pheno.labels))
 })
+
 subtrees <- Filter(function(x) {
   if (is.null(x)) return(FALSE)
   if (length(x$tip.label) > 2) return(TRUE)
@@ -206,9 +203,11 @@ subtrees <- Filter(function(x) {
 ```
 ```{r subtrees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=length(subtrees), cache.lazy = FALSE, cache=FALSE, echo=FALSE}
 
+plots <- list()
 if (!pz.options('skip_graphs')) {
-  plotted.pheno.subtrees <- plot.phenotype.trees(phenotype,
+  plots <- plot.phenotype.trees(phenotype,
                                                  subtrees,
+						 pz.db$taxonomy,
                                                  pheno.scale)
   if (!is.null(plotted.pheno.subtrees)) {
     if (length(plotted.pheno.subtrees) > 0) {
@@ -223,118 +222,9 @@ if (!pz.options('skip_graphs')) {
   }
 }
 
-```
-`r rmd.message`
-# Associations between genes and taxa
-
-This table gives an overview of how many genes were significantly associated at
-an FDR of 5%.
-
-```{r get_associations, warning = FALSE, message = FALSE, echo=FALSE, cache=FALSE}
-
-# Functions returns: list(
-#     results=results,
-#     signif=signif,
-#     signs=signs,
-#     pos.sig=pos.sig,
-#     results.matrix=results.matrix,
-#     phy.with.sigs=phy.with.sigs,
-#     pos.sig.descs=pos.sig.descs,
-#     pos.sig.thresh=pos.sig.thresh,
-#     pos.sig.thresh.descs=pos.sig.thresh.descs
-# )
-
-list2env(get_signif_associated_genes(pz.db, phenotype, do_POMS, p.method),
-         environment())
-
-write.csv(file = file.path(pz.options('out_dir'), "pos-sig-thresholded.csv"),
-          pos.sig.thresh.descs)
-
-write.csv(file = file.path(pz.options('out_dir'), "all-results.csv"),
-          results.matrix)
-
-```
-# Gene association heat maps
-
-The left shows the phenotype painted on tips of the tree as above. The right
-adds a heatmap where blue points represent presence of a gene (aligned with the
-tips of the tree) and white points represent absence. Only
-significantly-associated genes are displayed. Genes are clustered from left to
-right by Jaccard dissimilarity, so genes with similar patterns of inheritance
-will form vertical stripes. Horizontal stripes may be visible for taxa that
-have particularly extreme phenotypes.
-
-```{r gene_assoc_heat_maps, warning = FALSE, message = FALSE, echo=FALSE, results="hide", dev = "png", dpi = 300, cache=FALSE}
-
-cluster.plots <- mapply(do.clust.plot,
-                        pz.db$gene.presence[phy.with.sigs],
-                        pos.sig.thresh[phy.with.sigs],
-                        pz.db$trees[phy.with.sigs],
-                        plotted.pheno.trees[phy.with.sigs],
-                        phy.with.sigs,
-                        SIMPLIFY = FALSE)
-
-rm(cluster.plots)
-rm(plotted.pheno.trees)
-
-```
-
-# Enrichment analysis
-
-This process takes the set of genes that are significant and positively
-associated with the phenotype, then asks whether there are more than expected
-by chance in a given KEGG module or pathway. This requires clusterProfiler to
-be installed. </p>
-
-All pathways/modules returned are significant at an FDR of 25%. "Strong", "Med",
-and "Weak" refer to per-gene significance cutoffs of 5%, 10%, and 25%,
-respectively.
-
-```{r enrichment_analysis, warning = FALSE, message = FALSE, echo = FALSE,results="hide", cache=FALSE}
-do_enrichment <- ("clusterProfiler" %in% rownames(installed.packages()))
-if (do_enrichment) {
-    enr_tbls <- get_enrichment_tbls(signif,
-                                    signs,
-                                    pz.db,
-                                    results.matrix,
-                                    export=TRUE,
-                                    print_out=TRUE)
-    
-} else {
-  pz.message("Skipping enrichment as clusterProfiler could not be found")
-}
-```
-
-```{r cleanup, warning=FALSE, message=FALSE, echo=FALSE}
-# Clean up memory before rendering
-rm(results)
-rm(plotted.pheno.subtrees)
-rm(plotted.pheno.trees)
-rm(pz.db)
-```
-
-# Full output files
-
-Links to other files generated by the report:
-
-```{r, results='asis', echo=FALSE}
-
-if (is.null(pz.options('relative_out_dir'))) {
-  r.outdir <- pz.options('out_dir')
-} else {
-  r.outdir <- pz.options('relative_out_dir')
-}
-for (f in c("phenotype.tab",
-            "all-results.csv",
-            "pos-sig-thresholded.csv",
-            "enr-table.csv",
-            "enr-overlaps.csv",
-            "enr-overlaps-sorted.csv")) {
-  fp <- file.path(r.outdir, f)
-  # Note, check the actual output directory when we're trying to figure out what
-  # got made
-  if (file.exists(file.path(pz.options('out_dir'), f))) {
-    cat(paste0(' * [**', f, '**](', fp, ')\n'))
-  }
-}
-```
+clinUtils::knitPrintListPlots(
+        plotsList = plots,
+        type = "plotly",
+        titles = NULL,
+        titleLevel = NULL
+)
